<resources>
    <string name="app_name">RaaProjekat</string>
    <string name="firstNameButtonText">First name</string>
    <string name="lastNameButtonText">Last name</string>
    <string name="emailButtonText">E-Mail</string>
    <string name="confirmEmailText">Confirm E-mail</string>
    <string name="passwordButtonText">Password</string>
    <string name="confirmPasswordText">Confirm password</string>
    <string name="signInButtonText">Sign in</string>
    <string name="registerQuestionText">Don\'t have an account?</string>
    <string name="registerLinkText">Sign up here</string>
    <string name="forgottenPassword">Forgot password?</string>
    <string name="loginQuestion">Already have an account?</string>
    <string name="loginLink">Log in here</string>
    <string name="registerButtonText">Register</string>
    <string name="logoutButton">Logout</string>
    <string name="emailError">Wrong E-Mail</string>
    <string name="passwordError">Wrong password</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="summaryDetails">Summary</string>
    <string name="menuDetails">Menu</string>
    <string name="errorTextPassword">Passwords don\'t match</string>
    <string name="errorTextEmail">Invalid E-Mail format</string>
    <string name="errorTextNames">Name fields are empty</string>
    <string name="errorCombination">Invalid E-Mail/Password combination,try again.</string>
    <string name="choose_cuisine">Choose cuisine</string>
    <string name="firstNameKey" translatable="false">firstNameField</string>
    <string name="lastNameKey" translatable="false">lastNameField</string>
    <string name="preferredCuisineKey" translatable="false">cuisineField</string>
    <string name="errorTextCuisine">Please choose a preferred cuisine</string>
    <string name="cuisineButtonText">Favorite cuisine</string>
    <string name="edit_info">Edit info</string>
    <string name="id" translatable="false">id</string>
    <string name="commit_changes">Commit changes</string>
    <string name="passwordKey" translatable="false">password</string>
    <string name="go_to_maps">Maps</string>
    <string name="image_of_a_restaurant">Image of a restaurant.</string>
    <string name="websiteText">Website</string>
    <string name="contactText">Contact</string>
    <string name="addressText">Address</string>
    <string name="favoriteFab">Floating button with a heart.</string>
    <string name="appLogo">Logo of the application saying \'Restaurants\'</string>
    <string name="profileImage">Profile picture of the current user.</string>
    <string name="homeTabName">Home</string>
    <string name="favoritesTabName">Favorites</string>
    <string name="profileTabName">Profile</string>
    <string name="blankPassword">Password is blank</string>
    <string name="existingUser">User already in database</string>
    <string name="unmatchingPasswords">Passwords don\'t match.</string>
    <string name="location" translatable="false">Location</string>

</resources>