<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/low_poly_grid_haikei__1_">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/logoutButton"

        app:layout_constraintStart_toStartOf="@+id/textFieldCuisine"
        app:layout_constraintTop_toBottomOf="@+id/textFieldCuisine"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/edit_info"
        app:icon="@drawable/ic_outline_edit_24"
        app:layout_constraintBottom_toTopOf="@id/textFieldFirstName"
        app:layout_constraintEnd_toEndOf="@id/textFieldFirstName"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/commitButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:text="@string/commit_changes"
        app:icon="@drawable/ic_outline_check_24"
        app:layout_constraintEnd_toEndOf="@id/textFieldCuisine"
        app:layout_constraintTop_toBottomOf="@+id/textFieldCuisine"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFirstName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/firstNameButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIcon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

        <com.google.android.material.textfield.TextInputEditText
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="David"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/lastNameButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFirstName"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="Guetta" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/emailButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLastName"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textEmailAddress"
            tools:text="john.johnson@gmail.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCuisine"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/cuisineButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="Wine" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profileImage"
        android:src="@drawable/ic_outline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>